<resources>
    <string name="app_name">Hour Calculator</string>
    <string name="in_time_adapter">In time: %1$s</string>
    <string name="out_time_adapter">Out time: %1$s</string>
    <string name="break_time_adapter_plural">Break time: %1$s minutes</string>
    <string name="break_time_adapter_singular">Break time: %1$s minute</string>
    <string name="total_time_adapter_singular">Total: %1$s hour</string>
    <string name="total_time_adapter_plural">Total: %1$s hours</string>
    <string name="date_adapter">Date: %1$s</string>
    <string name="total_asc">totalHours ASC</string>
    <string name="info">Info</string>
    <string name="sort">Sort</string>
    <string name="total_desc">totalHours DESC</string>
    <string name="changed_sort_mode_most_entered">Changed sorting method to show entries with most hours first</string>
    <string name="changed_sort_mode_first_entered">Changed sorting method to show the first entered first</string>
    <string name="cant_sort_history_is_empty">Can\'t sort, history is empty</string>
    <string name="changed_sort_mode_least_entered">Changed sorting method to show entries with least hours first</string>
    <string name="day_asc">date ASC</string>
    <string name="changed_sort_mode_last_entered">Changed sorting method to show most recent entries first</string>
    <string name="day_desc">date DESC</string>
    <string name="cant_show_info_history_empty">Can\'t show info, there aren\'t any hours stored</string>
    <string name="PM">PM</string>
    <string name="AM">AM</string>
    <string name="press_back_again_to_exit">Press BACK again to Exit</string>
    <string name="delete">Delete</string>
    <string name="would_you_like_to_delete_history">Would you like to delete this entry?</string>
    <string name="hour_was_not_updated">Hour was not updated</string>
    <string name="undo">UNDO</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="warning">Warning</string>
    <string name="would_you_like_to_delete_all">Would you like to delete all entries?</string>
    <string name="yes">Yes</string>
    <string name="all_entries_deleted">All entries deleted</string>
    <string name="no">No</string>
    <string name="cant_edit_entry">Can\'t edit entry</string>
    <string name="history_deleted">History deleted</string>
    <string name="one_entry_already_enabled">One entry already enabled</string>
    <string name="two_entries_already_enabled">Two entries already enabled</string>
    <string name="three_entries_already_enabled">Three entries already enabled</string>
    <string name="four_entries_already_enabled">Four entries already enabled</string>
    <string name="five_entries_already_enabled">Five entries already enabled</string>
    <string name="six_entries_already_enabled">Six entries already enabled</string>
    <string name="seven_entries_already_enabled">Seven entries already enabled</string>
    <string name="history_deletion_multiple">The number of hours stored is greater than the number that is allowed to be stored. Would you like to delete %1$d entries?</string>
    <string name="history_deletion_single">The number of hours stored is greater than the number that is allowed to be stored. Would you like to delete %1$d entry?</string>
    <string name="in_time_and_out_time_can_not_be_the_same">In time and out time can not be the same</string>
    <string name="the_entered_break_time_is_too_big">The entered break time is too big</string>
    <string name="total_hours_with_break_time_format">Total hours: %1$d:%2$s\nTotal hours with break: %3$d:%4$s</string>
    <string name="total_hours_time_format">Total hours: %1$d:%2$s</string>
    <string name="total_hours_with_break_decimal_format">Total hours: %1$d.%2$s\nTotal hours with break: %3$s</string>
    <string name="total_hours_decimal_format">Total hours: %1$d.%2$s</string>
    <string name="there_was_an_error_please_try_again">There was an error, please try again</string>
    <string name="version_number_text">Version number:</string>
    <string name="build_number">Build number:</string>
    <string name="material_3">Material 3</string>
    <string name="material_3_link">https://m3.material.io/</string>
    <string name="google_ads">Google Ads</string>
    <string name="firebase_analytics">Firebase Analytics</string>
    <string name="firebase_crashlytics">Firebase Crashlytics</string>
    <string name="firebase_performance_monitoring">Firebase Performance Monitoring</string>
    <string name="in_app_review">In App Review and Splash Screen</string>
    <string name="edit">Edit</string>
    <string name="delete_all">Delete all</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="reset_to_defaults">Reset to defaults</string>
    <string name="history_settings">History settings</string>
    <string name="edit_entry">Edit entry</string>
    <string name="out_time">Out</string>
    <string name="break_time">Break time (in minutes)</string>
    <string name="fifteen">15</string>
    <string name="in_time">In</string>
    <string name="google_ads_link">https://developers.google.com/google-ads/api/docs/start</string>
    <string name="firebase_analytics_link">https://firebase.google.com/docs/analytics/</string>
    <string name="firebase_crashlytics_link">https://firebase.google.com/docs/crashlytics/</string>
    <string name="firebase_performance_link">https://firebase.google.com/docs/perf-mon/</string>
    <string name="play_core_link">https://developer.android.com/guide/playcore</string>
    <string name="appearance_settings">Appearance</string>
    <string name="light_theme">Light theme</string>
    <string name="black_theme">Black theme</string>
    <string name="follow_system">Follow system</string>
    <string name="accent_color">Accent color</string>
    <string name="one_entry">One entry</string>
    <string name="two_entries">Two entries</string>
    <string name="three_entries">Three entries</string>
    <string name="four_entries">Four entries</string>
    <string name="five_entries">Five entries</string>
    <string name="six_entries">Six entries</string>
    <string name="seven_entries">Seven entries</string>
    <string name="there_are_currently_no_hours_stored">There are currently no hours stored</string>
    <string name="calculate">Calculate</string>
    <string name="app_settings">General settings</string>
    <string name="customize_the_fundamental_settings_of_the_app">Calculation settings, time notation settings and more</string>
    <string name="customize_whether_hours_are_automatically_deleted">Toggle history, customize the max number of entries and more</string>
    <string name="patch_notes">Patch notes</string>
    <string name="view_changes_in_this_update">View changes in this update</string>
    <string name="appearance">Appearance</string>
    <string name="customize_the_theme_of_the_app">Customize the theme of the app</string>
    <string name="delete_app_data">Delete app data</string>
    <string name="delete_all_cache_and_app_data">Delete all cache and app data</string>
    <string name="black_theme_already_enabled">Black theme is already enabled</string>
    <string name="light_theme_is_already_enabled">Light theme is already enabled</string>
    <string name="error_with_break_time_must_be_numbers_only">Error with break time, must be numbers only</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="there_was_an_error_deleting_this_entry">There was an error deleting this entry</string>
    <string name="update">Update</string>
    <string name="would_you_like_to_hide_check_boxes">Would you like to hide checkboxes?</string>
    <string name="menuItem">MenuItem</string>
    <string name="item_selected">" item selected"</string>
    <string name="items_selected">" items selected"</string>
    <string name="hide">Hide</string>
    <string name="date_last_updated">Date last updated:</string>
    <string name="date">07/25/2023</string>
    <string name="restore_position">Restore position?</string>
    <string name="restore">Restore</string>
    <string name="toggle_history">Toggle history</string>
    <string name="hour_calculated_in_time_format">Hour calculated in colon notation</string>
    <string name="hour_calculated_in_decimal_format">Hour calculated in decimal notation</string>
    <string name="time_cards">Time Cards</string>
    <string name="would_you_like_to_hide_checkboxes">Would you like to hide checkboxes?</string>
    <string name="version_number_about">Version: %s (%d)</string>
    <string name="teal">teal</string>
    <string name="material_you">material you</string>
    <string name="pink">pink</string>
    <string name="orange">orange</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="og">og</string>
    <string name="snow_falling">snow falling</string>
    <string name="would_you_like_to_reset_accent_color_settings">Would you like to reset accent color settings?</string>
    <string name="generate_a_random_color_on_app_launch">Generate a random color on app start</string>
    <string name="pick_a_random_color_on_app_launch_from_saved_colors">Pick a random color on app start from saved colors</string>
    <string name="must_have_more_than_two_colors_saved_warning">You must have more than 2 colors saved</string>
    <string name="color_saved">Color saved</string>
    <string name="color_already_saved">Color already saved</string>
    <string name="must_save_a_color_first">Must save a color first</string>
    <string name="colored_nav_bar_info">When enabled the systems navigation bar will match the accent color that is chosen.\n\nWhen disabled the navigation bar will be black.</string>
    <string name="this_icon_is_already_enabled">This icon is already enabled</string>
    <string name="would_you_like_to_reset_app_settings">Would you like to reset the general settings?</string>
    <string name="would_you_like_to_reset_background_color_settings">Would you like to reset the background color settings?</string>
    <string name="follow_system_theme_already_enabled">Follow system theme already enabled</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="you_must_save_and_exit_editing_to_leave_the_view">You must save and exit to leave the view</string>
    <string name="time_card_info">Time card info</string>
    <string name="adding_image_failed">Adding image failed</string>
    <string name="picture_taken_and_added">Picture taken and added</string>
    <string name="about">About</string>
    <string name="animation_settings">Animation settings</string>
    <string name="background_color">Background color</string>
    <string name="break_text_box">Break text box</string>
    <string name="clear_break_text_box_automatically_when_time_is_successfully_calculated">Clear break text box automatically when time is successfully calculated</string>
    <string name="show_break_time_in_decimal">Show break time in decimal notation</string>
    <string name="name_unknown">Name: Unknown</string>
    <string name="wages_must_set_wages">Wages: Must set wages</string>
    <string name="wages_error">Wages: Error</string>
    <string name="wages">Wages: $%1$s</string>
    <string name="total">Total: %1$s/%2$s:%3$s</string>
    <string name="name">Name: %1$s</string>
    <string name="name_hint">Name</string>
    <string name="week">Week: %1$s</string>
    <string name="day">Day: %1$s</string>
    <string name="all_time_card_entries_deleted">All time card entries deleted</string>
    <string name="permissions_bottom_sheet_heading">Permissions</string>
    <string name="permissions_are_needed_to_provide_the_requested_functionality">Permissions are needed to provide the requested functionality</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>