<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragmentCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolBarHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleCentered="true"
        android:fitsSystemWindows="false" />

    <TimePicker
        android:id="@+id/timePickerInTimeHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:descendantFocusability="blocksDescendants"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_below="@id/textView"/>

    <TimePicker
        android:id="@+id/timePickerOutTimeHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:descendantFocusability="blocksDescendants"
        android:timePickerMode="spinner"
        android:layout_below="@id/outTimeTextViewHomeFragment"/>

    <TextView
        android:id="@+id/textViewBreakHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/break_time"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerOutTimeHomeFragment"
        android:layout_below="@id/timePickerOutTimeHomeFragment"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldBreakTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:endIconMode="clear_text"
        android:textColorHint="#939090"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:layout_constraintTop_toBottomOf="@id/textViewBreakHomeFragment"
        android:layout_below="@id/textViewBreakHomeFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/breakTimeEditTextHomeFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fifteen"
            android:inputType="number|phone"
            android:maxLength="2"
            android:minHeight="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/outTimeTextViewHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/out_time"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerInTimeHomeFragment"
        android:layout_below="@id/timePickerInTimeHomeFragment"/>

    <Button
        android:id="@+id/calculateButtonHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldBreakTime"
        android:layout_below="@id/outlinedTextFieldBreakTime"/>

    <TextView
        android:id="@+id/outputTextViewHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/calculateButtonHomeFragment"
        tools:hint="Total Hours: 6.42"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_time"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timePickerInTimeHomeFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialToolBarHomeFragment"
        app:layout_goneMarginTop="8dp"
        android:layout_below="@id/materialToolBarHomeFragment"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>