<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="20dp"
        android:layout_height="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/view_corner_radius"/>

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/warning"
        android:textColor="?attr/textColor"
        style="@style/TextAppearance.Material3.DisplaySmall"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="?attr/cardBackground"
        app:cardCornerRadius="14dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/would_you_like_to_delete_history"
                android:textColor="?attr/settingsTextColor"
                style="@style/TextAppearance.Material3.BodyLarge"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintTop_toBottomOf="@id/infoCardView"
        app:layout_constraintStart_toEndOf="@id/noButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        style="@style/Widget.Material3.Button" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintTop_toBottomOf="@id/infoCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/yesButton"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        style="@style/Widget.Material3.Button.OutlinedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>