<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/backgroundColor"
    tools:context=".fragments.NumberOfEntriesBeforeDeletionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:background="?attr/backgroundColor"
        android:foreground="?attr/selectableItemBackground"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayoutNumberOfDaysBeforeDeletion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="28dp"
            app:titleCollapseMode="scale"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolBarNumberOfDaysBeforeDeletion"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/main_menu_reset"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:navigationIconTint="?attr/textColor"
                app:title="Number Of Days"
                app:buttonGravity="center_vertical" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="always"
        android:paddingBottom="25dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/daysWorkedCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="?attr/cardBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.Material3.CardView.Filled">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/one_entry"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/two_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/three_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/four_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/five"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/five_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/six"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/six_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>

                    <RadioButton
                        android:id="@+id/seven"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/seven_entries"
                        android:textColor="?attr/settingsTextColor"
                        android:textSize="12sp"
                        android:minHeight="48dp"
                        android:theme="?attr/radioButtonTheme"/>
                </RadioGroup>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>